[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/book/CategorySelect.gd" type="Script" id=1]
[ext_resource path="res://ui/util/NamedTabs.gd" type="Script" id=2]
[ext_resource path="res://ui/util/ObjectList.gd" type="Script" id=3]
[ext_resource path="res://ui/util/ThemeProperty.gd" type="Script" id=4]
[ext_resource path="res://ui/book/BookPane.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/book/BookSearch.gd" type="Script" id=6]
[ext_resource path="res://ui/book/BookTab.gd" type="Script" id=7]
[ext_resource path="res://ui/book/SearchStatus.gd" type="Script" id=8]

[node name="Books" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 10
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Split" type="HSplitContainer" parent="."]
margin_left = 5.0
margin_top = 10.0
margin_right = 1187.0
margin_bottom = 759.0
custom_constants/autohide = 0
split_offset = 400

[node name="Left" type="Control" parent="Split"]
margin_right = 600.0
margin_bottom = 749.0
rect_min_size = Vector2( 200, 0 )

[node name="Search" type="VBoxContainer" parent="Split/Left"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="TabContainer" parent="Split/Left/Search"]
margin_right = 600.0
margin_bottom = 63.0
tab_align = 0
script = ExtResource( 2 )
editor_icons = [ "Search", "Zoom" ]
labels = [ ".search.base", ".search.advanced" ]

[node name="Basic" type="LineEdit" parent="Split/Left/Search/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 32.0
margin_right = -5.0
margin_bottom = -5.0
placeholder_text = ".search.book.entry"

[node name="ToolButton" type="ToolButton" parent="Split/Left/Search/Tabs/Basic"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.0
focus_mode = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
theme_class = "EditorIcons"
theme_name = "Search"
theme_type = 2
target_property = "icon"

[node name="Advanced" type="VBoxContainer" parent="Split/Left/Search/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 32.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Grid" type="GridContainer" parent="Split/Left/Search/Tabs/Advanced"]
margin_right = 686.0
margin_bottom = 126.0
columns = 2

[node name="Title" type="LineEdit" parent="Split/Left/Search/Tabs/Advanced/Grid"]
margin_right = 341.0
margin_bottom = 22.0
size_flags_horizontal = 3
placeholder_text = ".book.title"

[node name="ID" type="LineEdit" parent="Split/Left/Search/Tabs/Advanced/Grid"]
margin_left = 345.0
margin_right = 686.0
margin_bottom = 22.0
size_flags_horizontal = 3
placeholder_text = ".book.id"

[node name="ISBN" type="LineEdit" parent="Split/Left/Search/Tabs/Advanced/Grid"]
margin_top = 26.0
margin_right = 341.0
margin_bottom = 48.0
size_flags_horizontal = 3
placeholder_text = ".book.isbn"

[node name="Authors" type="LineEdit" parent="Split/Left/Search/Tabs/Advanced/Grid"]
margin_left = 345.0
margin_top = 26.0
margin_right = 686.0
margin_bottom = 48.0
size_flags_horizontal = 3
placeholder_text = ".book.authors"

[node name="Publisher" type="LineEdit" parent="Split/Left/Search/Tabs/Advanced/Grid"]
margin_top = 52.0
margin_right = 341.0
margin_bottom = 74.0
size_flags_horizontal = 3
placeholder_text = ".book.publisher"

[node name="Category" type="OptionButton" parent="Split/Left/Search/Tabs/Advanced/Grid"]
margin_left = 345.0
margin_top = 52.0
margin_right = 686.0
margin_bottom = 74.0
size_flags_horizontal = 3
text = ".category"
clip_text = true
script = ExtResource( 1 )
allow_empty = true

[node name="Year" type="LineEdit" parent="Split/Left/Search/Tabs/Advanced/Grid"]
margin_top = 78.0
margin_right = 341.0
margin_bottom = 100.0
size_flags_horizontal = 3
placeholder_text = ".book.year"

[node name="Note" type="LineEdit" parent="Split/Left/Search/Tabs/Advanced/Grid"]
margin_left = 345.0
margin_top = 78.0
margin_right = 686.0
margin_bottom = 100.0
size_flags_horizontal = 3
placeholder_text = ".book.note"

[node name="User" type="LineEdit" parent="Split/Left/Search/Tabs/Advanced/Grid"]
margin_top = 104.0
margin_right = 341.0
margin_bottom = 126.0
size_flags_horizontal = 3
placeholder_text = ".user"

[node name="State" type="OptionButton" parent="Split/Left/Search/Tabs/Advanced/Grid"]
margin_left = 345.0
margin_top = 104.0
margin_right = 686.0
margin_bottom = 126.0
size_flags_horizontal = 3
text = ".book.state"
items = [ ".book.state", null, false, 0, null, ".book.borrowable", null, false, 1, null, ".book.not-borrowable", null, false, 2, null, ".book.unavaliable", null, false, 3, null ]
selected = 0

[node name="Search" type="Button" parent="Split/Left/Search/Tabs/Advanced"]
margin_top = 130.0
margin_right = 686.0
margin_bottom = 152.0
size_flags_horizontal = 3
text = ".search.action"

[node name="BookList" type="Tree" parent="Split/Left/Search"]
margin_top = 68.0
margin_right = 600.0
margin_bottom = 687.0
size_flags_vertical = 3
columns = 4
hide_folding = true
hide_root = true
select_mode = 1
script = ExtResource( 3 )
column_names = PoolStringArray( ".book.id", ".book.title", ".book.authors", ".book.state" )
column_sizes = PoolIntArray( 120, 150, 100, 100 )
column_expand = PoolByteArray( 0, 1, 1, 0 )
column_selectors = PoolStringArray( "id", "title", "#book_authors", "#book_state" )

[node name="Status" type="Label" parent="Split/Left/Search"]
margin_top = 692.0
margin_right = 600.0
margin_bottom = 718.0
script = ExtResource( 8 )

[node name="Add" type="Button" parent="Split/Left/Search"]
margin_top = 723.0
margin_right = 600.0
margin_bottom = 749.0
text = ".book.new"
script = ExtResource( 4 )
theme_class = "EditorIcons"
theme_name = "Add"
theme_type = 2
target_property = "icon"

[node name="Right" type="Control" parent="Split"]
margin_left = 608.0
margin_right = 1182.0
margin_bottom = 749.0
rect_min_size = Vector2( 200, 0 )

[node name="BookPane" parent="Split/Right" instance=ExtResource( 5 )]
margin_top = 26.0
size_flags_horizontal = 3
[connection signal="search_results" from="Split/Left/Search" to="Split/Left/Search/BookList" method="fill"]
[connection signal="search_results" from="Split/Left/Search" to="Split/Left/Search/Status" method="_on_search_results"]
[connection signal="text_entered" from="Split/Left/Search/Tabs/Basic" to="Split/Left/Search" method="_on_search"]
[connection signal="pressed" from="Split/Left/Search/Tabs/Basic/ToolButton" to="Split/Left/Search" method="_on_search"]
[connection signal="text_entered" from="Split/Left/Search/Tabs/Advanced/Grid/Title" to="Split/Left/Search" method="_on_advanced_search"]
[connection signal="text_entered" from="Split/Left/Search/Tabs/Advanced/Grid/ID" to="Split/Left/Search" method="_on_advanced_search"]
[connection signal="text_entered" from="Split/Left/Search/Tabs/Advanced/Grid/ISBN" to="Split/Left/Search" method="_on_advanced_search"]
[connection signal="text_entered" from="Split/Left/Search/Tabs/Advanced/Grid/Authors" to="Split/Left/Search" method="_on_advanced_search"]
[connection signal="text_entered" from="Split/Left/Search/Tabs/Advanced/Grid/Publisher" to="Split/Left/Search" method="_on_advanced_search"]
[connection signal="item_selected" from="Split/Left/Search/Tabs/Advanced/Grid/Category" to="Split/Left/Search" method="_on_advanced_search"]
[connection signal="text_entered" from="Split/Left/Search/Tabs/Advanced/Grid/Year" to="Split/Left/Search" method="_on_advanced_search"]
[connection signal="text_entered" from="Split/Left/Search/Tabs/Advanced/Grid/Note" to="Split/Left/Search" method="_on_advanced_search"]
[connection signal="text_entered" from="Split/Left/Search/Tabs/Advanced/Grid/User" to="Split/Left/Search" method="_on_advanced_search"]
[connection signal="item_selected" from="Split/Left/Search/Tabs/Advanced/Grid/State" to="Split/Left/Search" method="_on_advanced_search"]
[connection signal="pressed" from="Split/Left/Search/Tabs/Advanced/Search" to="Split/Left/Search" method="_on_advanced_search"]
[connection signal="object_selected" from="Split/Left/Search/BookList" to="Split/Right/BookPane" method="set_book"]
[connection signal="pressed" from="Split/Left/Search/Add" to="Split/Right/BookPane" method="_on_add_book"]
[connection signal="add_book" from="Split/Right/BookPane" to="Split/Left/Search/BookList" method="add_and_select_object"]
[connection signal="update_book" from="Split/Right/BookPane" to="Split/Left/Search/BookList" method="update_selected"]
